Minor fix for the DisasterReportController
